...
    <string name="coursetitle">coursetitle</string>
    <string name="earned_grade">earned_grade</string>
    <string name="grade_in_course">grade_in_course</string>
    <string name="get_result">get_result</string>
    <string name="save_result">save_result</string>
    <string name="type_university_collage_name">type_university_collage_name</string>
    <string name="add">add</string>
    <string name="add_info">add_info</string>
    <string name="note">Note</string>
    <string name="todo">TODO</string>
    <string name="add_record">Add Record</string>
    <string name="please_add_something">Please add something</string>
    <string name="type_password">type_password</string>
    <string name="type_your_username">type_your_username</string>
    <string name="retype_password">retype_password</string>
    <string name="register_account">register_account</string>
    <string name="go_to_next_page">go_to_next_page</string>
    <string name="select_your_term_from_below_dropdown_menu">select_your_term_from_below_dropdown_menu</string>
    <string name="register">register</string>
    <string name="password">password</string>
    <string name="sign_in">sign_in</string>
    <string name="delete_course">delete_course</string>
    <string name="course_name">course_name</string>
    <string name="picture">picture</string>
    <string name="enter_name_of_course">enter_name_of_course</string>
    <string name="grade_name">grade_name</string>
    <string name="grade_percent">grade_percent</string>
    <string name="grade">grade</string>
    <string name="_100">_100</string>
    <string name="textView">TextView</string>
    <string name="gpa_calculator">GPA Calculator</string>
    <string name="calender">Calender</string>
    <string name="notes">Notes</string>
    <string name="to_do_list">To_do_list</string>
    <string name="email_professor">Email Professor</string>
    <string name="new_class_exam">New Class/Exam</string>
    <string name="new_event_note">New Event/Note</string>
    <string name="courselist">courseList</string>
    <string name="to">To:</string>
    <string name="subject">Subject:</string>
    <string name="message">Message:</string>
    <string name="send">send</string>
</resources>
