...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.152"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/input_userName"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:autoSizeTextType="uniform"
        android:ems="10"
        android:hint="username"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Study_Manager_text"
        tools:ignore="TextContrastCheck"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/input_Password"
        android:layout_width="298dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:autoSizeTextType="uniform"
        android:ems="10"
        android:hint="password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/signBtn"
        app:layout_constraintEnd_toEndOf="@+id/input_userName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/input_userName"
        app:layout_constraintTop_toBottomOf="@+id/input_userName"
        app:layout_constraintVertical_bias="0.034"
        tools:ignore="TextContrastCheck"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/input_Password"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="@+id/input_Password" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="132dp"
        android:layout_height="48dp"
        android:autoSizeTextType="uniform"
        android:background="@color/cardview_shadow_start_color"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
...
